Update of GUIMike

--- a/ExplorerGUIMike/ExplorerGUIMike.csproj
+++ b/ExplorerGUIMike/ExplorerGUIMike.csproj
@@ -78,10 +78,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="TableControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Window1.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -97,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BehaviorBoundMapToScreen.cs" />
+    <Compile Include="BehaviorSingleClickHelper.cs" />
     <Compile Include="DraggableBackgroundMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
@@ -110,9 +107,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <Compile Include="TableControl.xaml.cs">
-      <DependentUpon>TableControl.xaml</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
