*Last Second Solution to exit button
Signed-off-by: Jimmy Warren <jdwarren21@tntech.edu>

--- a/ExplorerGUICombined/ExplorerGUICombined.csproj
+++ b/ExplorerGUICombined/ExplorerGUICombined.csproj
@@ -112,6 +112,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="RegionWindow.cs" />
+    <Compile Include="RegionWindowsLayer.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
