*Work on layering and the region windows. *Region windows now have a similar border to a highlight after a region is clicked
Signed-off-by: Mike Ortman <mikeortman@gmail.com>

--- a/ExplorerGUICombined/ExplorerGUICombined.csproj
+++ b/ExplorerGUICombined/ExplorerGUICombined.csproj
@@ -97,7 +97,7 @@
   <ItemGroup>
     <Compile Include="BehaviorBoundMapToScreen.cs" />
     <Compile Include="BehaviorSingleClick.cs" />
-    <Compile Include="DraggableBackgroundMap.cs" />
+    <Compile Include="BackgroundMapLayer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
