--- a/ExplorerGUICombined/ExplorerGUICombined.csproj
+++ b/ExplorerGUICombined/ExplorerGUICombined.csproj
@@ -81,7 +81,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="Window1.xaml">
+    <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -89,15 +89,22 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Window1.xaml.cs">
-      <DependentUpon>Window1.xaml</DependentUpon>
+    <Compile Include="MainWindow.xaml.cs">
+      <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BehaviorBoundMapToScreen.cs" />
-    <Compile Include="BehaviorSingleClick.cs" />
-    <Compile Include="BackgroundMapLayer.cs" />
+    <Compile Include="Behaviors\BehaviorBoundMapToScreen.cs" />
+    <Compile Include="Behaviors\BehaviorSingleClick.cs" />
+    <Compile Include="ContentCards\ContentCardBase.cs" />
+    <Compile Include="ContentCards\ContentCardImage.cs" />
+    <Compile Include="ContentCards\ContentCardRegion.cs" />
+    <Compile Include="Dock.cs" />
+    <Compile Include="GUIConfiguration.cs" />
+    <Compile Include="Layers\LayerDocks.cs" />
+    <Compile Include="Layers\LayerBackgroundMap.cs" />
+    <Compile Include="Behaviors\BehaviorOffscreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -111,8 +118,8 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="RegionWindow.cs" />
-    <Compile Include="RegionWindowsLayer.cs" />
+    <Compile Include="RandomColorManager.cs" />
+    <Compile Include="Layers\LayerContentCards.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
